<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>huplay</groupId>
    <artifactId>openallgpt</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <!-- Java version configuration: -->
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <!-- Common dependencies -->
    <dependencies>

        <!-- For json support: -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.17.0</version>
        </dependency>

        <!-- Protobuf support for SentencePiece tokenizer: -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>4.26.1</version>
        </dependency>

        <!-- For unit tests: -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <!--
                Standard profile

                Copies mathProviders/standard.provider as math.provider
                Excludes to compile the nd4j and vecto-api math packages
            -->
            <id>standard</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <excludes>
                                <exclude>**/math/impl/nd4j/*.java</exclude>
                                <exclude>**/math/impl/vectorApi/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.coderplus.maven.plugins</groupId>
                        <artifactId>copy-rename-maven-plugin</artifactId>
                        <version>1.0.1</version>
                        <executions>
                            <execution>
                                <id>rename-file</id>
                                <phase>compile</phase>
                                <goals><goal>rename</goal></goals>
                                <configuration>
                                    <sourceFile>${project.build.outputDirectory}/mathProviders/standard.provider</sourceFile>
                                    <destinationFile>${project.build.outputDirectory}/math.provider</destinationFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <excludes>
                                <exclude>sentencepiece_model.proto</exclude>
                                <exclude>mathProviders/*</exclude>
                                <exclude>mathProviders</exclude>
                                <exclude>logback.xml</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <archive><manifest><mainClass>app.AppStandaloneLauncher</mainClass></manifest></archive>
                            <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                            <finalName>open-all-gpt</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!--
                nd4j profile

                Uses additional nd4j dependencies
                Copies mathProviders/nd4j.provider as math.provider
                Excludes to compile the standard and vectorApi math packages
            -->
            <id>nd4j</id>
            <dependencies>
                <dependency>
                    <groupId>org.nd4j</groupId>
                    <artifactId>nd4j-native</artifactId>
                    <version>1.0.0-M2.1</version>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-nop</artifactId>
                    <version>1.7.30</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <excludes>
                                <exclude>**/math/impl/standard/*.java</exclude>
                                <exclude>**/math/impl/vectorApi/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.coderplus.maven.plugins</groupId>
                        <artifactId>copy-rename-maven-plugin</artifactId>
                        <version>1.0.1</version>
                        <executions>
                            <execution>
                                <id>rename-file</id>
                                <phase>compile</phase>
                                <goals><goal>rename</goal></goals>
                                <configuration>
                                    <sourceFile>${project.build.outputDirectory}/mathProviders/nd4j.provider</sourceFile>
                                    <destinationFile>${project.build.outputDirectory}/math.provider</destinationFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <excludes>
                                <exclude>sentencepiece_model.proto</exclude>
                                <exclude>mathProviders/*</exclude>
                                <exclude>mathProviders</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <archive><manifest><mainClass>app.AppStandaloneLauncher</mainClass></manifest></archive>
                            <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                            <finalName>open-all-gpt</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!--
                vector-api profile

                Enables vector incubator java feature
                Copies mathProviders/vectorApi.provider as math.provider
                Excludes to compile the standard and nd4j math packages
            -->
            <id>vector-api</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-modules</arg>
                                <arg>jdk.incubator.vector</arg>
                            </compilerArgs>
                            <excludes>
                                <exclude>**/math/impl/standard/*.java</exclude>
                                <exclude>**/math/impl/nd4j/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.coderplus.maven.plugins</groupId>
                        <artifactId>copy-rename-maven-plugin</artifactId>
                        <version>1.0.1</version>
                        <executions>
                            <execution>
                                <id>rename-file</id>
                                <phase>compile</phase>
                                <goals><goal>rename</goal></goals>
                                <configuration>
                                    <sourceFile>${project.build.outputDirectory}/mathProviders/vector-api.provider</sourceFile>
                                    <destinationFile>${project.build.outputDirectory}/math.provider</destinationFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <excludes>
                                <exclude>sentencepiece_model.proto</exclude>
                                <exclude>mathProviders/*</exclude>
                                <exclude>mathProviders</exclude>
                                <exclude>logback.xml</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M7</version>
                        <configuration>
                            <forkCount>1</forkCount>
                            <argLine>--add-modules=jdk.incubator.vector</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <archive><manifest><mainClass>app.AppStandaloneLauncher</mainClass></manifest></archive>
                            <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                            <finalName>open-all-gpt</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!--
                Developer profile

                Using standard math provider,
                But adding all dependencies needed for ND4J, and enable vector incubator feature
            -->
            <id>developer</id>
            <dependencies>
                <dependency>
                    <groupId>org.nd4j</groupId>
                    <artifactId>nd4j-native</artifactId>
                    <version>1.0.0-M2.1</version>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-nop</artifactId>
                    <version>1.7.30</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-modules</arg>
                                <arg>jdk.incubator.vector</arg>
                            </compilerArgs>
                            <excludes>
                                <exclude>**/math/impl/nd4j/*.java</exclude>
                                <exclude>**/math/impl/vectorApi/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.coderplus.maven.plugins</groupId>
                        <artifactId>copy-rename-maven-plugin</artifactId>
                        <version>1.0.1</version>
                        <executions>
                            <execution>
                                <id>rename-file</id>
                                <phase>compile</phase>
                                <goals><goal>rename</goal></goals>
                                <configuration>
                                    <sourceFile>${project.build.outputDirectory}/mathProviders/standard.provider</sourceFile>
                                    <destinationFile>${project.build.outputDirectory}/math.provider</destinationFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <excludes>
                                <exclude>sentencepiece_model.proto</exclude>
                                <exclude>mathProviders/*</exclude>
                                <exclude>mathProviders</exclude>
                                <exclude>logback.xml</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M7</version>
                        <configuration>
                            <forkCount>1</forkCount>
                            <argLine>--add-modules=jdk.incubator.vector</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <configuration>
                            <archive><manifest><mainClass>app.AppStandaloneLauncher</mainClass></manifest></archive>
                            <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                            <finalName>open-all-gpt</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                        <executions>
                            <execution>
                                <id>make-assembly</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>